tests/ui/extern/extern-types-unsizing-79409.stderr
warning: the feature `unsized_locals` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/extern-types-unsizing-79409.rs:2:12
   |
LL | #![feature(unsized_locals)]
   |            ^^^^^^^^^^^^^^
   |
   = note: see issue #48055 <https://github.com/rust-lang/rust/issues/48055> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the size for values of type `Device` cannot be known
  --> $DIR/extern-types-unsizing-79409.rs:11:28
   |
LL | unsafe fn make_device() -> Box<Device> {
   |                            ^^^^^^^^^^^ doesn't have a known size
   |
   = help: the trait `MetaSized` is not implemented for `Device`
note: required by a bound in `Box`
  --> $SRC_DIR/alloc/src/boxed.rs:LL:COL

error[E0277]: the size for values of type `Device` cannot be known
  --> $DIR/extern-types-unsizing-79409.rs:13:19
   |
LL |     Box::from_raw(0 as *mut _)
   |     ------------- ^^^^^^^^^^^ the trait `MetaSized` is not implemented for `Device`
   |     |
   |     required by a bound introduced by this call
   |
   = note: the trait bound `Device: MetaSized` is not satisfied
note: required by a bound in `Box::<T>::from_raw`
  --> $SRC_DIR/alloc/src/boxed.rs:LL:COL
help: consider borrowing here
   |
LL |     Box::from_raw(&0 as *mut _)
   |                   +
LL |     Box::from_raw(&mut 0 as *mut _)
   |                   ++++

error[E0277]: the size for values of type `Device` cannot be known
  --> $DIR/extern-types-unsizing-79409.rs:13:5
   |
LL |     Box::from_raw(0 as *mut _)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a known size
   |
   = help: the trait `MetaSized` is not implemented for `Device`
note: required by a bound in `Box`
  --> $SRC_DIR/alloc/src/boxed.rs:LL:COL

error[E0277]: the size for values of type `Device` cannot be known
  --> $DIR/extern-types-unsizing-79409.rs:19:31
   |
LL |     let d: Device = unsafe { *make_device() };
   |                               ^^^^^^^^^^^^^ doesn't have a known size
   |
   = help: the trait `MetaSized` is not implemented for `Device`
note: required by a bound in `Box`
  --> $SRC_DIR/alloc/src/boxed.rs:LL:COL

error: aborting due to 4 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
